# katalog

./: .gitignore  README.md  biome.json  dependabot.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: linters.yml
assets/: updater.json
src/: App.tsx  Katalog.tsx  KatalogProvider.tsx  ThemeProvider.tsx  epub.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: book.rs  main.rs  xml.rs
src/components/: App.tsx  BookCard.module.css  BookCard.tsx  DropzoneContent.tsx  EmptyLibrary.tsx  KatalogHeader.module.css  KatalogHeader.tsx
src/helpers/: utils.ts
src/providers/: KatalogProvider.tsx  ThemeProvider.tsx
src/routes/: BookEditRoute.tsx  BookRoute.tsx  KatalogRoute.tsx  RootRoute.tsx
src/stores/: katalog.ts
