[package]
name = "katalog"
version = "0.10.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.25", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub = "2.1.2"
zip = "2.1.5"
tauri-plugin-fs = "=2.0.0-beta.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
